memperbaiki semua tampilan

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
     
 
 </header>    
+<!-- background bergerak-->
+<div class='box'>
+    <div class='wave -one'></div>
+    <div class='wave -two'></div>
+    <div class='wave -three'></div>
+  </div>
+
 
 <!--design menu utama-->
     <section class="home show-animate" id="home">
